# backlog_manager_v2

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.bat  INSTALL.md  README.md  RUN.bat  SETUP_CI.md  codecov.yml  coverage.json  pip.conf.example  prompt_decomposicao_epicos.md  pyproject.toml  pytest.ini  sonar-project.properties  srs.md
.claude/: settings.json  settings.local.json
.claude/commands/: analyze-allocation.md  analyze-presentation.md  prompt-epic-refinement.md  prompt-epic-spec.md  ship.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.claude/hooks/: post-edit-format.sh  pre-bash-guard.sh  pre-edit-guard.sh
.github/: release.yml
.github/agents/: speckit.plan.agent.md
.github/prompts/: prompt-epic-spec.prompt.md
.github/workflows/: ci.yml  develop-merge.yml  feature-ci.yml  main-release.yml  publish.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: allocation_algorithms_best_practices.md  epic-input-template.md  epic-roadmap-refactor.md  epic-roadmap-ux-fix.md  epic-roadmap-ux-overhaul.md  epic-roadmap-visualization.md  epicos_gui_refator.md  plan-test-refactor.md  plan_auto_versioning_cicd.md  plan_coverage_90.md  prompt-qa-skill.md  prompt_gui_refactor.md
docs/epics/: EP-001_fundacao-e-persistencia.md  EP-002_dominio-core-entidades.md  EP-003_gestao-de-backlog.md  EP-004_gestao-de-recursos.md  EP-005_gestao-de-dependencias.md  EP-006_calculo-de-cronograma.md  EP-007_motor-de-alocacao.md  EP-008_interface-grafica.md  EP-009_integracao-excel.md  EP-010_testes-de-integracao-e2e.md  EP-013_gui-calculo-cronograma.md  EP-014_script-seed-teste-alocacao.md  EP-015_melhoria-algoritmos-alocacao-cronograma.md  EP-017_design-system-fundacao-visual.md  EP-018_layout-principal-migracao-paineis.md  EP-019_tabela-de-backlog.md  EP-020_busca-filtros-menu-contexto.md  EP-021_estilizacao-dialogs.md  EP-022_polimento-ux-avancado.md  ROADMAP.md
scripts/: check_deps.py  extract_metrics.py  publish_to_pypi.py  seed_test_backlog.py  validate_allocation_data.py
scripts/common/: __init__.py  db_path.py
specs/001-ep001-foundation-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ep002-domain-validations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ep003-backlog-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ep004-resource-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ep005-dependency-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ep006-scheduling-calculation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ep007-allocation-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-ep008-graphical-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ep009-excel-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-ep010-integration-e2e-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-fix-startup-bugs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-excel-gui-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-schedule-gui-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-seed-test-backlog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-improve-allocation-scheduling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-automate-allocation-analysis/: data-model.md  plan-improvements.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-ep017-design-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-ep018-layout-migracao-paineis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-backlog-table/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-busca-filtros-menu-contexto/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-estilizacao-dialogs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-polimento-ux-avancado/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-reset-planning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-story-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-table-selection-highlight/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/027-column-resize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/028-manual-allocation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-velocity-sprint-datepicker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/030-pypi-publish-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/031-cicd-gitflow-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/032-test-refactor-headless/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/033-sonarqube-issues-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/034-sonarqube-quality-gate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/035-sonarqube-issues-resolution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/036-test-coverage-90/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/037-auto-versioning-cicd/: plan.md  (+5 more)
tests/: __init__.py  conftest.py  factories.py  headless_mocks.py
(+506 files in other folders)
