[tool.poetry]
name = "backlog-manager"
version = "0.1.0"
description = "Backlog Manager - Sistema de gerenciamento de backlog com alocacao automatica"
authors = []
readme = "README.md"
packages = [{include = "backlog_manager", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
aiosqlite = "^0.19.0"
aiofiles = "^23.0"
pydantic = "^2.0"
PySide6 = "^6.10.0"
qasync = "^0.27.1"

[tool.poetry.scripts]
backlog-manager = "backlog_manager.presentation.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.23"
pytest-qt = "^4.4"
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"
pre-commit = "^3.6"
pydocstyle = "^6.3"
types-aiofiles = "^23.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["PySide6.*", "qasync.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "backlog_manager.presentation.*"
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "backlog_manager.presentation.container"
disable_error_code = ["arg-type"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (with I/O)",
]

[tool.coverage.run]
source = ["src/backlog_manager"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
