[tool.poetry]
name = "zion-backlog-manager"
version = "0.1.0"
description = "A desktop backlog manager with automatic developer allocation, built with PySide6"
authors = ["Tuyoshi Vinicius <tuyoshi.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuyoshivinicius/backlog-manager-v2"
repository = "https://github.com/tuyoshivinicius/backlog-manager-v2"
keywords = ["backlog", "project-management", "Qt", "PySide6", "developer-allocation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Framework :: Qt for Python",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]
packages = [{include = "backlog_manager", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
aiosqlite = "^0.19.0"
aiofiles = "^23.0"
pydantic = "^2.0"
PySide6 = "^6.10.0"
qasync = "^0.27.1"
openpyxl = "^3.1.0"

[tool.poetry.scripts]
zion-backlog-manager = "backlog_manager.presentation.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.23"
pytest-qt = "^4.4"
pytest-timeout = "^2.3"
mypy = "^1.8"
pre-commit = "^3.6"
types-aiofiles = "^23.0"
ruff = "^0.3.0"
twine = "^6.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["PySide6.*", "qasync.*", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "backlog_manager.presentation.*"
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "backlog_manager.presentation.container"
disable_error_code = ["arg-type"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (with I/O)",
    "e2e: End-to-end tests with GUI",
    "perf: Performance tests",
    "slow: Slow tests (> 10s)",
]
timeout = 30

[tool.coverage.run]
source = ["src/backlog_manager"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    '\.\.\.\.',
]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "E501", "N818"]

[tool.ruff.lint.per-file-ignores]
"src/backlog_manager/presentation/**" = ["N802"]
"tests/**" = ["E501", "D103", "D102", "D105", "D107", "D403", "N802", "N806", "SIM222", "B007", "B008", "B028", "E741", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"
